force-app/main/default/objects/Template_Task__c/Template_Task__c.object-meta.xml
<CustomObject>
    <description>Independent tasks for templates.</description>
    <label>Template Task</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>