force-app/main/default/objects/Template_Task__c/fields/Completion_Status__c.field-meta.xml
<CustomField>
    <fullName>Completion_Status__c</fullName>
    <formula>IF(Completed__c = TRUE, &quot;Completed&quot;,
IF(Estimated_Completion_Date__c &lt; TODAY() , &quot;Overdue&quot; , &quot;In Progress&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completion Status</label>
    <type>Text</type>
</CustomField>