force-app/main/default/objects/Template_Task__c/fields/Relative_Days_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Relative_Days_to_Complete__c</fullName>
    <description>Time to complete task.</description>
    <label>Relative Days to Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>