force-app/main/default/objects/Template_Task__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <description>Independent to templates.</description>
    <label>Template</label>
    <referenceTo>Template__c</referenceTo>
    <relationshipLabel>Template Tasks</relationshipLabel>
    <relationshipName>Template_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>